# traipse

./: CMakeLists.txt  CPPLINT.cfg  readme.md
scripts/: build.sh  common.sh  compile-shaders.sh  dev.sh  rebuild.sh
src/: main.cpp
src/traipse/application/: application.cpp  application.h  arguments.cpp  arguments.h  main.cpp
src/traipse/core/: commands.cpp  commands.h  core.h  devices.cpp  devices.h  framebuffers.cpp  framebuffers.h  graphicspipeline.cpp  graphicspipeline.h  instances.cpp  instances.h  layers.h  pipeline.cpp  pipeline.h  preferences.cpp  preferences.h  queues.cpp  queues.h  slut.cpp  slut.h  surfaces.cpp  surfaces.h  swapchains.cpp  swapchains.h
src/traipse/executables/: basic.cpp
